--- a/source/chore_card/chore_card.css
+++ b/source/chore_card/chore_card.css
@@ -11,14 +11,14 @@ grid-template-areas:
     'item1 item3 item5'
     'item1 item4 item5';
 grid-template-columns: 120px 400px 75px;
-grid-template-rows: 70px 70px 70px;
+grid-template-rows: 60px 60px 60px;
 gap: 10px;
-background-color: #2196F3;
+background-color: rgb(181, 177, 177);
 padding: 10px;
 }
 
 .grid-container > div {
-background-color: rgba(255, 255, 255, 0.8);
+background-color: rgb(181, 177, 177);
 text-align: left;
 padding: 20px 0;
 font-size: 20px;
@@ -59,4 +59,9 @@ border-radius: 50%;
 #checkbox {
 width: 50px;
 height: 50px;
+}
+
+#label {
+    background-color: orange;
+    padding: 2px;
 }
