--- a/source/chore_card/chore_card.css
+++ b/source/chore_card/chore_card.css
@@ -26,54 +26,73 @@
 }
 
 .grid-container > div {
-background-color: rgb(181, 177, 177);
-text-align: left;
-padding: 20px 0;
-font-size: 20px;
+    background-color: rgb(181, 177, 177);
+    text-align: left;
+    padding: 20px 0;
+    font-size: 20px;
 }
 
-/* */
+/* #### Styling for Grid Items #### */
 
+/**
+ * Establish style for individual items in the grid container
+ * References all divs contained within the grid-container div
+ */
 .item1 {
-grid-area: item1;
-display: flex;
-justify-content: center;
-align-items: center;
+    /* Defines item1 as the leftmost grid item from the template */
+    grid-area: item1;
+    /* Sets image in the center of the grid item */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .item2 {
-grid-area: item2;
+    /* Defines item1 as the top middle grid item from the template */
+    grid-area: item2;
 }
 
 .item3 {
-grid-area: item3;
+    /* Defines item1 as the middle middle grid item from the template */
+    grid-area: item3;
 }
 
 .item4 {
-grid-area: item4;
+    /* Defines item1 as the bottom middle grid item from the template */
+    grid-area: item4;
 }
 
 .item5 {
-grid-area: item5;
-display: flex;
-justify-content: right;
-align-items: top;
+    /* Defines item1 as the rightmost grid item from the template */
+    grid-area: item5;
+    /* Sets icon in the top right of the grid item */ 
+    display: flex;
+    justify-content: right;
+    align-items: top;
 }
 
-/* */
+/* #### Layout of specific elements #### */
 
+/**
+ * Adjust sizing and additional element properties of specific items in grid
+ * References the assignee img, checkbox icon, and label span respectively
+ */
 #assignee {
-width: 100px;
-height: 100px;
-border-radius: 50%;
+    /* Configure size of image */
+    width: 100px;
+    height: 100px;
+    /* Make image rounded */
+    border-radius: 50%;
 }
 
 #checkbox {
-width: 50px;
-height: 50px;
+    /* Configure size of icon */
+    width: 50px;
+    height: 50px;
 }
 
 #label {
     background-color: orange;
+    /* Slightly increase padding around label */
     padding: 2px;
 }
