--- a/source/main_page/main.css
+++ b/source/main_page/main.css
@@ -2,6 +2,7 @@
 
 body{
     margin: 0;
+    overflow: scroll;
 }
 
 /*styling for header and chore list text*/
@@ -23,6 +24,7 @@ body{
     height: 100%;
 }
 
+
 .header-title{
     margin-left: 44px;
     margin-right: 44px;
@@ -31,84 +33,179 @@ body{
     color: white;
     font-weight: 400;
 }
+.header-title a{
+    text-decoration: none;
+    color: white;
+}
+.header-title a:hover{
+    color: #999;
+}
+#chore-cards{
+    position: fixed;
+    top: 70px;
+    left: 20px;
+    overflow-y: auto;
+    z-index: -1;
+}
 
-/* styling for drop down button*/
-.dropdown-box {
-    display: none;
-    position: fixed;
-    z-index: 8;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-}
-.modal-menu_content {
-    margin: 50px auto;
-    width: 60%;
-}
-.hamburg{
-    position: fixed;
-    top: 0;
-    right: 0;
-}
-.hamburg #openbtn:hover{
-    cursor: pointer;
-}
-.modal_menu {
-    display: none;
-    position: fixed;
-    z-index: 8;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-}
+/* ### styling for drop down button ### */
 
 /*
+ * Create hamburger menu to display the menu on the top right corner
+ */
+.hamburg_menu{
+    position: fixed;
+    top: -2.5px;
+    right: 0;
+}
+/* Change the transparency if cursor moves on the menu*/
+.hamburg_menu #openbtn:hover{
+    cursor: pointer;
+    opacity: 50%;
+}
+/* 
+ * Set the drop-down button to be hamburger like, not the default button box
+ * Reference to the hamburger menu button
+ */
 #drop-down{
     background: transparent;
     border: none;
     margin: 10px;
     width: fit-content;
     height: fit-content;
-    cursor:pointer;
+}
+/* Set its position to be top right corner */
+#openbtn{
+    position: relative;
+    top: 5px;
+    right: 20px;
+}
+/* Create a contain to hold the three buttons: by due date, by assignee, by section*/
+.priority_container{
+    /* Define pop-up menu background color*/
+    background-color: rgb(227, 227, 227);
+    /* Set it to be a a bit lower than the menu button*/
+    top: 52px;
+    right: 0;
+    width: 300%;
+    height: 200%;
+    text-align: center;
+    position: absolute;
+    border-radius: 10px;
+    padding: 10px 0;
+    bottom: 100%;
+    z-index: -1;
 }
 
-.dropdown-box #dropdownList{
+.menu_box{
     display: none;
+    z-index: 2;
 }
-.dropdown-box a {
-    text-decoration: none;
-    color: white;
-    padding: 14px 16px;
-    font-size: 16px;
-    display: block;
+.menu_box p{
+    margin-top: 7px;
+    margin-left: -135px;
+    z-index: 1;
+    text-align: center;
 }
- */
-/* Navigation toggle menu styling */
-/*
-.dropdown-box a.icon {
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
+.menu_box p:hover{
+    color:rgb(149, 121, 91);
+    cursor:default;
 }
- */
-/* hover effect on navigation logo and menu */
-/*
-.dropdown-box a:hover {
-    background-color: #ddd;
-    color: black;
+.priority_button{
+    background: #1c87c9;
+    background-position: center;
+    color: white; /* White text */
+    /*padding: top right bottom left*/
+    padding: 10px 20px 10px 20px; /* Some padding */
+    cursor: pointer; /* Pointer/hand icon */
+    border-radius: 10px;
+    border-top: none;
+    outline: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: none;
+    margin-bottom:25px;
+    margin-left: 25px;
+    margin-top: 20px;
+    width: 82%;
+    display: block; /* Make the buttons appear below each other */
+}
+
+#due_date_btn:hover, #section_btn:hover, #assignee_btn:hover{
+    background-color: #8ddecb;
+    color:rgba(0, 0, 0, 0.4);
 } 
-*/
+.popup_arrow {
+    position: absolute;
+    width: 0; 
+    height: 0; 
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 20px solid rgb(227, 227, 227);
+    top: 40px;
+    right: 58%;
+}
+
+.hamburg_menu .display {
+    visibility: visible;
+}
+.main_page{
+    overflow-y: auto;
+}
+
+
+/*Styling for info box*/
+.info_modal{
+    display: none;
+    height: 400px;
+    width: 400px;
+    border-radius: 10px;
+    justify-content: center;
+    background-color: #999;
+    margin-left: 500px;
+    margin-top: 150px;
+    z-index: 10;
+}
+.info_box{
+    width: 400px;
+    border-radius: 10px;
+    justify-content: center;
+    background-color: rgb(255, 255, 255);
+}
+.info_box p{
+    position: absolute;
+    overflow-y: scroll;
+    width:100px;
+    font-size: 20px;
+    margin-left: 20px;
+    margin-top: 40px;
+    color: rgb(194, 194, 194);
+    text-align:justify;
+    text-align-last:justify;
+}
+.info_box h2{
+    position:absolute;
+    margin-left: 20px;
+    margin-top: 10px;
+    font-weight: 400;
+    color: rgb(194, 194, 194);
+}
+.info_box .close_btn {
+    color: rgb(178, 178, 178);
+    float: right;
+    margin-right: -20px;
+    margin-top: -5px;
+    font-size: 28px;
+    font-weight: bold;
+}
+.info_box .close_btn:hover,
+.info_box .close_btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
 /*styling for FAB add chore button*/
-footer{
+.footer{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -154,6 +251,7 @@ footer{
     overflow: auto;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(5px);
 }
 .modal-content {
     margin: 50px auto;
@@ -204,10 +302,10 @@ button:hover {
     background: #2371a0;
 }
 .close {
-color: #aaa;
-float: right;
-font-size: 28px;
-font-weight: bold;
+    color: rgb(178, 178, 178);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
 }
 .close:hover,
 .close:focus {
@@ -221,13 +319,9 @@ button.button {
     outline: none;
     border-right: none;
     border-left: none;
-    border-bottom: #02274a 0px solid;
+    border-bottom: none;
     padding: 0 0 3px 0;
     font-size: 16px;
     cursor: pointer;
 }
 
-button.button:hover {
-    border-bottom: #a99567 0px solid;
-    color: #a99567;
-}
