fixing linter issue 1

--- a/source/main_page/main.css
+++ b/source/main_page/main.css
@@ -33,7 +33,7 @@ body{
 }
 
 /**
- * Container for title text for the header
+ * Container for header-title for the header
  */
 .title-box{
   /*Centering title in the middle of header*/
